Model switching complete

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -175,8 +175,8 @@
     <div class="model-switcher">
         <button onclick="toggleDropdown()">Switch Model</button>
         <div id="model-dropdown" class="dropdown-content">
-            <a href="#" onclick="switchModel('Model1')">Model1</a>
-            <a href="#" onclick="switchModel('Model2')">Model2</a>
+            <a href="#" onclick="switchModel('defualt')">defualt</a>
+            <a href="#" onclick="switchModel('HYDE')">HYDE</a>
             <a href="#" onclick="switchModel('Model3')">Model3</a>
         </div>
     </div>
